Finish first page.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Porfolio Personal</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <section class="first-page">
+        <header>
+            <a id="logo">Jtella<span>.</span></a>
+            <nav>
+                <a id="inicio">Inicio</a>
+                <a>Proyectos</a>
+                <a>Sobre mi</a>
+                <a>Contactame</a>
+                <button id="resume-btn"><a href="https://drive.google.com/file/d/1GhAcgDJHQkTW5vtDqt2m9uZKw_bAq-9Z/view" target="_blank">View resume ✉︎</a></button>
+            </nav>
+        </header>
+        <div class="rest-page">
+            <h1>Hola, soy <span>Joaquin Cotella</span></h1>
+            <h2>Un experimentado <span>Desarrollador Fullstack</span> transformando ideas en <br>impresionantes experiencias digitales. ¡Creemos algo increíble!</h2>
+            <div class="icons">
+                <a href="https://github.com/" target="_blank"><img src="./imgs/icons/github.svg" alt="github logo"></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jtella@proton.me&su=PORTFOLIO&body=Me interesa trabajar contigo!" target="_blank"><img src="./imgs/icons/gmail.svg" alt="gmail logo"></a>
+                <a href="https://www.linkedin.com/in/joaquin-cotella-94582121b/" target="_blank"><img src="./imgs/icons/linkedin.svg" alt="linkedin logo"></a>
+                <a href="https://x.com/" target="_blank"><img src="./imgs/icons/twitter.svg" alt="twitter logo"></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
