Finish the second page.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <nav>
                 <a id="inicio">Inicio</a>
                 <a>Proyectos</a>
+                <a>Skills</a>
                 <a>Sobre mi</a>
                 <a>Contactame</a>
                 <button id="resume-btn"><a href="https://drive.google.com/file/d/1GhAcgDJHQkTW5vtDqt2m9uZKw_bAq-9Z/view" target="_blank">View resume ✉︎</a></button>
@@ -29,6 +30,39 @@
                 <a href="https://x.com/" target="_blank"><img src="./imgs/icons/twitter.svg" alt="twitter logo"></a>
             </div>
         </div>
+    </section>
+    <section class="second-page">
+        <h3>PORTFOLIO</h3>
+        <p id="destacados"><span>Proyectos</span> destacados</p>
+        <div class="proyectos">
+            <div class="proyecto">
+                <img src="./imgs/projects/project1.PNG">
+                <p>Website project</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/projects/project2.PNG">
+                <p>Trello clone</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/projects/project3.PNG">
+                <p>"Uno" game</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/projects/project4.PNG">
+                <p>E-commerce Website</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/projects/project5.PNG">
+                <p>Twitter clone</p>
+            </div>
+            <div class="proyecto">
+                <img src="./imgs/projects/project6.PNG">
+                <p>Content Management System</p>
+            </div>
+        </div>
+    </section>
+    <section class="t-page">
+        <h4>About <span>me</span>.</h4>
     </section>
 </body>
 </html>
