--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
         <div class="proyectos">
             <div class="proyecto">
                 <img src="./imgs/projects/project1.PNG">
-                <p>Website project</p>
+                <p>Página para empresa</p>
             </div>
             <div class="proyecto">
                 <img src="./imgs/projects/project2.PNG">
-                <p>Trello clone</p>
+                <p>Clon de Trello</p>
             </div>
             <div class="proyecto">
                 <img src="./imgs/projects/project3.PNG">
-                <p>"Uno" game</p>
+                <p>Famoso juego "Uno"</p>
             </div>
             <div class="proyecto">
                 <img src="./imgs/projects/project4.PNG">
-                <p>E-commerce Website</p>
+                <p>Página para E-commerce</p>
             </div>
             <div class="proyecto">
                 <img src="./imgs/projects/project5.PNG">
-                <p>Twitter clone</p>
+                <p>Clon de Twitter</p>
             </div>
             <div class="proyecto">
                 <img src="./imgs/projects/project6.PNG">
@@ -61,7 +61,10 @@
             </div>
         </div>
     </section>
-    <section class="t-page">
+    <section class="third-page">
+
+    </section>
+    <section class="four-page">
         <p id="skills">SKILLS</p>
         <h4>Technical <span>skills</span>.</h4>
         <div class="skills-presentation">
