Finish fifth page.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="third-page">
         <p id="ab-me">MY BIO</p>
-        <h4>About <span>me</span>.</h4>
+        <h4>Sobre <span>mí</span>.</h4>
         <section id="cuerpo-ab-me">
             <section id="imagen-ab">
                 <img src="./imgs/profile-am.png" alt="Imagen de perfil">
@@ -79,7 +79,7 @@
     </div>
     <div class="four-page">
         <p id="skills">SKILLS</p>
-        <h5>Technical <span>skills</span>.</h5>
+        <h5>Habilidades <span>técnicas</span>.</h5>
         <section class="skills-presentation">
             <p class="titles-skills">Front-End</p>
             <hr>
@@ -110,5 +110,47 @@
             </section>
         </section>
     </div>
+    <div class="fifth-page">
+        <p id="contact-p">Pongamonos en contacto</p>
+        <h6>Contactáctame<span>.</span></h6>
+        <p id="text-contact">
+            Actualmente estoy disponible para trabajar fulltime, por proyecto o part-time<br>
+            en trabajos como Desarrollador Fullstack
+        </p>
+        <section class="form-contact">
+            <section id="left-side">
+                <h7>Tienes una idea de un proyecto?</h7>
+                <p id="ls-p">Vamos a hablarlo!</p>
+                <section class="addons">
+                    <div class="icon">
+                        <svg fill="#000000" viewBox="-3.36 -3.36 22.72 22.72" xmlns="http://www.w3.org/2000/svg" transform="rotate(90)"><g id="SVGRepo_bgCarrier" stroke-width="0" transform="translate(0,0), scale(1)"><rect x="-3.36" y="-3.36" width="22.72" height="22.72" rx="11.36" fill="#D1D1D1" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M10.91 2.75h3a11.67 11.67 0 0 1-3.8 7.46 11.71 11.71 0 0 1-7.88 3h-.77V10.4L4 9.52l.84 1.42.59 1.06 1.07-.62a14.36 14.36 0 0 0 4.77-4.5L12 5.73l-1.22-.64-1-.52 1.09-1.82m0-1.25a1.26 1.26 0 0 0-1.07.61L8.75 3.93a1.24 1.24 0 0 0 .49 1.75l1 .52a13.06 13.06 0 0 1-4.36 4.1L5 8.89a1.25 1.25 0 0 0-1-.62 1.22 1.22 0 0 0-.41.07L1 9.22a1.25 1.25 0 0 0-.79 1.18v2.85a1.25 1.25 0 0 0 1.25 1.25h.75A13 13 0 0 0 15.14 2.88a1.26 1.26 0 0 0-1.25-1.38z"></path></g></svg>
+                        <p>+54 3584284762</p>
+                    </div>
+                    <div class="icon">
+                        <svg viewBox="-163.84 -163.84 1351.68 1351.68" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-163.84" y="-163.84" width="1351.68" height="1351.68" rx="675.84" fill="#D1D1D1" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M128 224v512a64 64 0 0 0 64 64h640a64 64 0 0 0 64-64V224H128zm0-64h768a64 64 0 0 1 64 64v512a128 128 0 0 1-128 128H192A128 128 0 0 1 64 736V224a64 64 0 0 1 64-64z"></path><path fill="#000000" d="M904 224 656.512 506.88a192 192 0 0 1-289.024 0L120 224h784zm-698.944 0 210.56 240.704a128 128 0 0 0 192.704 0L818.944 224H205.056z"></path></g></svg>
+                        <p>cotellajoaquin@gmail.com</p>
+                    </div>
+                    <div class="icon">
+                        <svg viewBox="-3.36 -3.36 30.72 30.72" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-3.36" y="-3.36" width="30.72" height="30.72" rx="15.36" fill="#D1D1D1" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12.5 7.04148C12.3374 7.0142 12.1704 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13C13.6569 13 15 11.6569 15 10C15 9.82964 14.9858 9.6626 14.9585 9.5" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> <path d="M5 15.2161C4.35254 13.5622 4 11.8013 4 10.1433C4 5.64588 7.58172 2 12 2C16.4183 2 20 5.64588 20 10.1433C20 14.6055 17.4467 19.8124 13.4629 21.6744C12.5343 22.1085 11.4657 22.1085 10.5371 21.6744C9.26474 21.0797 8.13831 20.1439 7.19438 19" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
+                        <p id="ch-color">Córdoba, Argentina</p>
+                    </div>
+                </section>
+            </section>
+            <section id="right-side">
+                <form>
+                    <label for="fname">Nombre completo</label>
+                    <input type="text" name="fname" placeholder="Tu nombre" required>
+                    <label for="mail">Correo Electrónico</label>
+                    <input type="email" name="mail" placeholder="ejemplo@mail.com" required>
+                    <label for="textbox">Mensaje</label>
+                    <textarea name="textbox" id="text-box" placeholder="Escribe algo" required></textarea>
+                    <input type="reset" id="send-btn" value="Enviar mensaje ✉︎">
+                </form>
+            </section>
+        </section>
+    </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
