--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="first-page">
         <header>
-            <a id="logo">Jtella<span>.</span></a>
+            <a class="logo">Jtella<span>.</span></a>
             <nav>
                 <a id="inicio">Inicio</a>
-                <a>Proyectos</a>
-                <a>Skills</a>
-                <a>Sobre mi</a>
-                <a>Contactame</a>
+                <a href="#second-page">Proyectos</a>
+                <a href="#third-page">Habilidades</a>
+                <a href="#four-page">Sobre mi</a>
+                <a href="#fifth-page">Contactame</a>
                 <button id="resume-btn"><a href="https://drive.google.com/file/d/1GhAcgDJHQkTW5vtDqt2m9uZKw_bAq-9Z/view" target="_blank">View resume ✉︎</a></button>
             </nav>
         </header>
@@ -31,7 +31,7 @@
             </section>
         </section>
     </div>
-    <div class="second-page">
+    <div id="second-page" class="second-page">
         <h3>PORTFOLIO</h3>
         <p id="destacados"><span>Proyectos</span> destacados</p>
         <section class="proyectos">
@@ -61,7 +61,7 @@
             </section>
         </section>
     </div>
-    <div class="third-page">
+    <div id="third-page" class="third-page">
         <p id="ab-me">MY BIO</p>
         <h4>Sobre <span>mí</span>.</h4>
         <section id="cuerpo-ab-me">
@@ -77,7 +77,7 @@
             </section>
         </section>
     </div>
-    <div class="four-page">
+    <div id="four-page" class="four-page">
         <p id="skills">SKILLS</p>
         <h5>Habilidades <span>técnicas</span>.</h5>
         <section class="skills-presentation">
@@ -110,7 +110,7 @@
             </section>
         </section>
     </div>
-    <div class="fifth-page">
+    <div id="fifth-page" class="fifth-page">
         <p id="contact-p">Pongamonos en contacto</p>
         <h6>Contactáctame<span>.</span></h6>
         <p id="text-contact">
@@ -150,7 +150,36 @@
         </section>
     </div>
     <footer>
-        
+        <div class="footer-desc">
+            <section>
+                <a id="logo-footer">Jtella<span>.</span></a>
+            </section>
+            <section class="tags">
+                <section class="tag">
+                    <p>Web developer</p>
+                    <p>Fullstack developer</p>
+                </section>
+                <section class="tag">
+                    <p>Inicio</p>
+                    <p>Proyectos</p>
+                    <p>Habilidades</p>
+                    <p>Sobre mi</p>
+                    <p>Contactame</p>
+                </section>
+                <section id="tag2">
+                    <p>Redes sociales</p>
+                    <section class="redes-icons">
+                        <svg viewBox="-5 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" stroke="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>facebook [#FDFDFD]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-385.000000, -7399.000000)" fill="#FDFDFD"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M335.821282,7259 L335.821282,7250 L338.553693,7250 L339,7246 L335.821282,7246 L335.821282,7244.052 C335.821282,7243.022 335.847593,7242 337.286884,7242 L338.744689,7242 L338.744689,7239.14 C338.744689,7239.097 337.492497,7239 336.225687,7239 C333.580004,7239 331.923407,7240.657 331.923407,7243.7 L331.923407,7246 L329,7246 L329,7250 L331.923407,7250 L331.923407,7259 L335.821282,7259 Z" id="facebook-[#FDFDFD]"> </path> </g> </g> </g> </g></svg>
+                        <svg viewBox="0 -2 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>twitter [#FDFDFD]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-60.000000, -7521.000000)" fill="#FDFDFD"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M10.29,7377 C17.837,7377 21.965,7370.84365 21.965,7365.50546 C21.965,7365.33021 21.965,7365.15595 21.953,7364.98267 C22.756,7364.41163 23.449,7363.70276 24,7362.8915 C23.252,7363.21837 22.457,7363.433 21.644,7363.52751 C22.5,7363.02244 23.141,7362.2289 23.448,7361.2926 C22.642,7361.76321 21.761,7362.095 20.842,7362.27321 C19.288,7360.64674 16.689,7360.56798 15.036,7362.09796 C13.971,7363.08447 13.518,7364.55538 13.849,7365.95835 C10.55,7365.79492 7.476,7364.261 5.392,7361.73762 C4.303,7363.58363 4.86,7365.94457 6.663,7367.12996 C6.01,7367.11125 5.371,7366.93797 4.8,7366.62489 L4.8,7366.67608 C4.801,7368.5989 6.178,7370.2549 8.092,7370.63591 C7.488,7370.79836 6.854,7370.82199 6.24,7370.70483 C6.777,7372.35099 8.318,7373.47829 10.073,7373.51078 C8.62,7374.63513 6.825,7375.24554 4.977,7375.24358 C4.651,7375.24259 4.325,7375.22388 4,7375.18549 C5.877,7376.37088 8.06,7377 10.29,7376.99705" id="twitter-[#FDFDFD]"> </path> </g> </g> </g> </g></svg>
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#FDFDFD"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M2 6C2 3.79086 3.79086 2 6 2H18C20.2091 2 22 3.79086 22 6V18C22 20.2091 20.2091 22 18 22H6C3.79086 22 2 20.2091 2 18V6ZM6 4C4.89543 4 4 4.89543 4 6V18C4 19.1046 4.89543 20 6 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4H6ZM12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9ZM7 12C7 9.23858 9.23858 7 12 7C14.7614 7 17 9.23858 17 12C17 14.7614 14.7614 17 12 17C9.23858 17 7 14.7614 7 12ZM17.5 8C18.3284 8 19 7.32843 19 6.5C19 5.67157 18.3284 5 17.5 5C16.6716 5 16 5.67157 16 6.5C16 7.32843 16.6716 8 17.5 8Z" fill="#FDFDFD"></path> </g></svg>
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.5 8C7.32843 8 8 7.32843 8 6.5C8 5.67157 7.32843 5 6.5 5C5.67157 5 5 5.67157 5 6.5C5 7.32843 5.67157 8 6.5 8Z" fill="#FDFDFD"></path> <path d="M5 10C5 9.44772 5.44772 9 6 9H7C7.55228 9 8 9.44771 8 10V18C8 18.5523 7.55228 19 7 19H6C5.44772 19 5 18.5523 5 18V10Z" fill="#FDFDFD"></path> <path d="M11 19H12C12.5523 19 13 18.5523 13 18V13.5C13 12 16 11 16 13V18.0004C16 18.5527 16.4477 19 17 19H18C18.5523 19 19 18.5523 19 18V12C19 10 17.5 9 15.5 9C13.5 9 13 10.5 13 10.5V10C13 9.44771 12.5523 9 12 9H11C10.4477 9 10 9.44772 10 10V18C10 18.5523 10.4477 19 11 19Z" fill="#FDFDFD"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M20 1C21.6569 1 23 2.34315 23 4V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4C1 2.34315 2.34315 1 4 1H20ZM20 3C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3H20Z" fill="#FDFDFD"></path> </g></svg>
+                    </section>
+                </section>
+            </section>
+        </div>
+        <div id="finalOfPage">
+            <p>Desarrolado por mí, Diseño tomado de <a href="https://dribbble.com/shots/22413177-Frontend-Developer-Portfolio" target="_blank">Dribbble</a></p>
+        </div>
     </footer>
 </body>
 </html>
