--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Porfolio Personal</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     <div class="first-page">
         <header>
             <a class="logo">Jtella<span>.</span></a>
             <nav>
+                <svg class="hamburger-menu" viewBox="0 -0.5 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6.5 11.75C6.08579 11.75 5.75 12.0858 5.75 12.5C5.75 12.9142 6.08579 13.25 6.5 13.25V11.75ZM18.5 13.25C18.9142 13.25 19.25 12.9142 19.25 12.5C19.25 12.0858 18.9142 11.75 18.5 11.75V13.25ZM6.5 15.75C6.08579 15.75 5.75 16.0858 5.75 16.5C5.75 16.9142 6.08579 17.25 6.5 17.25V15.75ZM18.5 17.25C18.9142 17.25 19.25 16.9142 19.25 16.5C19.25 16.0858 18.9142 15.75 18.5 15.75V17.25ZM6.5 7.75C6.08579 7.75 5.75 8.08579 5.75 8.5C5.75 8.91421 6.08579 9.25 6.5 9.25V7.75ZM18.5 9.25C18.9142 9.25 19.25 8.91421 19.25 8.5C19.25 8.08579 18.9142 7.75 18.5 7.75V9.25ZM6.5 13.25H18.5V11.75H6.5V13.25ZM6.5 17.25H18.5V15.75H6.5V17.25ZM6.5 9.25H18.5V7.75H6.5V9.25Z" fill="#04D9C3"></path> </g></svg>
                 <a id="inicio">Inicio</a>
                 <a href="#second-page">Proyectos</a>
                 <a href="#third-page">Habilidades</a>
@@ -71,9 +73,7 @@
             <section id="cp-ab">
                 <p>
                     Hola! Mi nombre es <span>Joaquin</span> soy un estudiante de segundo año de <span>Ingeniería en Sistemas</span>,
-                     apasionado por la tecnología y siempre buscando aprender nuevas tecnologías. Mi curiosidad insaciable me impulsa a explorar y entender cómo funcionan las últimas innovaciones. Comprometido con el crecimiento personal y profesional, estoy constantemente buscando oportunidades para <span>expandir </span>
-                    mis conocimientos y habilidades en el campo de la ingeniería de sistemas.
-                </p>
+                     apasionado por la tecnología y siempre buscando aprender nuevas tecnologías. Mi curiosidad insaciable me impulsa a explorar y entender cómo funcionan las últimas innovaciones.
             </section>
         </section>
     </div>
