--- a/index.html
+++ b/index.html
@@ -138,12 +138,9 @@
             </section>
             <section id="right-side">
                 <form>
-                    <label for="fname">Nombre completo</label>
-                    <input type="text" name="fname" placeholder="Tu nombre" required>
-                    <label for="mail">Correo Electrónico</label>
-                    <input type="email" name="mail" placeholder="ejemplo@mail.com" required>
-                    <label for="textbox">Mensaje</label>
-                    <textarea name="textbox" id="text-box" placeholder="Escribe algo" required></textarea>
+                    <label>Nombre completo<input type="text" name="fullname" placeholder="Tu nombre" required></label>
+                    <label>Correo Electrónico<input type="email" name="mail" placeholder="ejemplo@mail.com" required></label>
+                    <label>Mensaje<textarea name="textbox" id="text-box" placeholder="Escribe algo" required></textarea></label>
                     <input type="reset" id="send-btn" value="Enviar mensaje ✉︎">
                 </form>
             </section>
@@ -151,7 +148,7 @@
     </div>
     <footer>
         <div class="footer-desc">
-            <section>
+            <section id="logo-container">
                 <a id="logo-footer">Jtella<span>.</span></a>
             </section>
             <section class="tags">
